Fix title not centered

--- a/frontend/src/styles/feedback/feedback-send.css
+++ b/frontend/src/styles/feedback/feedback-send.css
@@ -7,7 +7,7 @@
   grid-column: 3;
 }
 
-.form.feedback-card .title {
+.form.feedback-card .send-title {
   text-align: left;
 }
 
